nginx/script-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite_by_lua_file /etc/nginx/lua/plugins/modify_request/modify_request.lua;
spec:
  ingressClassName: nginx
  rules:
  - host: testing.com
    http:
      paths:
      - path: /((?:[^/]+/)*)?([^/]+)$
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc
            port:
              number: 80
